examples/datalog/18_advanced_patterns/53_cumulative_sum.dl.out
Connecting to server at http://127.0.0.1:8080...
Connected!

Server status: healthy
Current knowledge graph: default

> .kg create test_cumsum
Knowledge graph 'test_cumsum' created.
Switched to knowledge graph: test_cumsum
> .kg use test_cumsum
Switched to knowledge graph: test_cumsum
> +daily[(1, 10), (2, 20), (3, 15), (4, 25)].
Inserted 4 fact(s) into 'daily'.
> +cumsum(Day, <SUM:Amt>) :- daily(D, Amt), D <= Day, daily(Day, _).
Script error: Parse error: Invalid term: '<SUM:Amt>'
